# modern-ehr

./: .gitignore  README.md  docker-compose.override.yml  docker-compose.yml
backend/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_patient_alerts.py  0003_avatar_url_to_text.py  0004_three_role_model.py  0005_user_availability.py  0006_user_avatar_text.py  0007_query_indexes.py  0008_documents_content.py  0009_messaging.py  0010_patient_condition_tag.py  0011_message_attachments.py  0012_tasks.py  0013_form_requests.py  0014_patient_portal_auth.py  0015_task_type.py  0016_alert_source.py  0017_ai_insight_cache.py  0018_conversation_patient_read.py  0019_notification_kinds.py  0020_scribe_sessions.py  0021_isolate_patient_convs.py  0022_lab_source_document.py  0023_telehealth.py  0024_user_invite_columns.py  0025_appointment_modality.py  0026_payments_v1.py  0027_appointment_service_link.py  0028_provider_extended_fields.py  0029_patient_extended_profile.py
backend/app/: __init__.py  main.py
backend/app/ai/: chart_context.py  chart_hash.py  lab_extractor.py  llm.py  rag.py  risk.py  scribe.py  stt.py  suggest_reply.py  summary.py
backend/app/api/: deps.py
backend/app/catalog/: icd10_sample.tsv  seed_icd10.py
backend/app/core/: config.py  crypto.py  logging.py  rate_limit.py  (+1 more)
backend/scripts/: seed.py  seed_demo_vitals.py
backend/tests/: conftest.py  test_audit_scrubber.py  test_charge_service.py  test_health.py  test_invoice_service.py  test_patient_auth_service.py  test_payment_service.py  test_receipt_pdf_service.py  test_service_catalog_service.py  test_stripe_webhook.py  test_telehealth_smoke.py  test_token_type.py
(+625 files in other folders)
